--- a/org.gnome.Mahjongg.yaml
+++ b/org.gnome.Mahjongg.yaml
@@ -18,6 +18,6 @@ modules:
         - type: git
           url: https://gitlab.gnome.org/GNOME/gnome-mahjongg.git
           tag: '3.34.0'
-          commit: '8e63b5b86219151246a69a7e839d54d73028098a'X
+          commit: '8e63b5b86219151246a69a7e839d54d73028098a'
 cleanup:
   - "/share/man"
